--- a/portfolio/project-36/index.html
+++ b/portfolio/project-36/index.html
@@ -126,7 +126,7 @@
             <h1>露營年終慶</h1>
           </div>
           
-          <div class="content"><p>AsiaYo x Crona x 燕麥森林 所合作的露營活動，透過訂房送禮的方式，希望增加消費者平日預定的誘因。視覺標題強調折數，用營區的照片搭配遊玩小人的插圖外，再加上飛舞的彩帶讓視覺增添折扣感。</p>
+          <div class="content"><p>AsiaYo x Crona x 燕麥森林<br> 所合作的露營活動，透過訂房送禮的方式，希望增加消費者平日預定的誘因。視覺標題強調折數，用營區的照片搭配遊玩小人的插圖外，再加上飛舞的彩帶讓視覺增添折扣感。</p>
 <p><img src="/images/portfolio/item36-1.jpg" alt="">
 <br>
 為本次活動合作夥伴 Crona 及 燕麥森林所製作的社群宣傳圖
