--- a/portfolio/project-32/index.html
+++ b/portfolio/project-32/index.html
@@ -49,7 +49,7 @@
   
   <meta property="og:image" content="https://vickycheng0606.github.io/images/portfolio/item32.jpg" />
   
-  <meta property="og:title" content="2022 紅包袋" />
+  <meta property="og:title" content="2022 AsiaYo 紅包袋" />
 <meta property="og:description" content="2022 AsiaYo 紅包袋" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://vickycheng0606.github.io/portfolio/project-32/" /><meta property="article:section" content="portfolio" />
@@ -123,11 +123,11 @@
       <div class="col-lg-12">
         <div class="wow fadeInUp" data-wow-duration="1.5s">
           <div class="about-me-text mb-4">
-            <h1>2022 紅包袋</h1>
+            <h1>2022 AsiaYo 紅包袋</h1>
           </div>
           
-          <div class="content"><p>替 AsiaYo 設計的2022虎年紅包，兩款設計不一樣的風格，希望收到紅包的人看到圖案都能會心一笑。</p>
-<p>【年終鉅款，不虎你】用KUSO的句子與你迎接新年，除了「虎」字上做了特殊的設計外，在老虎的背上還隱藏了2022的字樣。
+          <div class="content"><p>替 AsiaYo 設計的2022虎年紅包，兩款設計不一樣的風格，希望收到紅包的人看到圖案都能會心一笑。<br><br>
+【年終鉅款，不虎你】用KUSO的句子與你迎接新年，除了「虎」字上做了特殊的設計外，在老虎的背上還隱藏了2022的字樣。
 <img src="/images/portfolio/item32-1.jpg" alt=""></p>
 <p>【虎朋引伴出遊去】用較可愛的風格設計出小老虎出遊去的意象，小老虎手上的提燈也象徵著 AsiaYo 2022主推的露營特色旅宿。
 <img src="/images/portfolio/item32-2.jpg" alt=""></p>
