--- a/portfolio/project-6/index.html
+++ b/portfolio/project-6/index.html
@@ -49,7 +49,7 @@
   
   <meta property="og:image" content="https://vickycheng0606.github.io/images/portfolio/item6.jpg" />
   
-  <meta property="og:title" content="2018-2023&lt;br&gt;年賀狀設計" />
+  <meta property="og:title" content="2018-2024&lt;br&gt;年賀狀設計" />
 <meta property="og:description" content="2018-2023｜年賀狀設計" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://vickycheng0606.github.io/portfolio/project-6/" /><meta property="article:section" content="portfolio" />
@@ -123,10 +123,13 @@
       <div class="col-lg-12">
         <div class="wow fadeInUp" data-wow-duration="1.5s">
           <div class="about-me-text mb-4">
-            <h1>2018-2023<br>年賀狀設計</h1>
+            <h1>2018-2024<br>年賀狀設計</h1>
           </div>
           
           <div class="content"><p>2018開始每年所製作的新年賀卡。以對稱為主軸設計，用幾何線條去勾勒對過節及當年度生肖的一些想像，期許自己能花十二年做出一系列的設計。</p>
+<h5 id="2023甲辰-龍年">【2023】甲辰 龍年</h5>
+<p><img src="/images/portfolio/item6-8.jpg" alt="">
+<br></p>
 <h5 id="2023癸卯-兔年">【2023】癸卯 兔年</h5>
 <p><img src="/images/portfolio/item6-7.jpg" alt="">
 <br></p>
