--- a/portfolio/project-33/index.html
+++ b/portfolio/project-33/index.html
@@ -126,14 +126,14 @@
             <h1>Dailyposter 每日設計</h1>
           </div>
           
-          <div class="content"><p>從2021.8月開始挑戰每日海報設計，並於2021.11月底完成100張的目標，目前仍持續進行2-3天一次的創作。
+          <div class="content"><p>從2021.8月開始挑戰每日海報設計，並於2021.11月完成100張的目標。
 <br><a href="https://www.instagram.com/vicky_dailydesign/">My Daily Poster IG +</a></p>
 <p><img src="/images/portfolio/item34-1.jpg" alt=""></p>
 <p><img src="/images/portfolio/item34-2.jpg" alt=""></p>
 <p>當時對自己的設計感受不到突破，所以開始了這樣的挑戰，讓自己可以多嘗試一些沒做過的風格。
 <img src="/images/portfolio/item34-3.jpg" alt=""></p>
 <p><img src="/images/portfolio/item34-4.jpg" alt=""></p>
-<p>做每日海報對我而言最困難的是持之以恆，因此成功完成100張對自己來說是莫大鼓勵，目前仍持續進行這樣的練習。
+<p>我認為做每日海報對最困難的是持之以恆，因此成功完成100張對自己來說是莫大鼓勵。
 <img src="/images/portfolio/item34-5.jpg" alt=""></p>
 </div>
         </div>
